done with HI collision section

--- a/macros.tex
+++ b/macros.tex
@@ -1,5 +1,6 @@
 % !TEX encoding = UTF-8 Unicode
 % !TEX root = thesis-ex.tex
+\newcommand{\sigmainel}{\sigma_{\mathrm{inel}}^{\mathrm{NN}}}
 \newcommand{\DeltaP}{$\Delta_P(\rvar)$}
 \newcommand{\DeltaTheta}{$\Delta_{\Theta(\rvar)}$}
 \newcommand{\RP}{$R_{P(\rvar)}$}
