--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -1,4 +1,85 @@
 % !TEX root = thesis-ex.tex
+@techreport{Perepelitsa:2212936,
+      author        = "{ATLAS Collaboration}",
+      title         = "{Centrality determination in $\sqrt{s_\mathrm{NN}} = 5.02$
+                       TeV Pb+Pb collision data in 2015}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATL-COM-PHYS-2016-1287",
+      month         = "Sep",
+      year          = "2016",
+      reportNumber  = "ATL-COM-PHYS-2016-1287",
+      url           = "https://cds.cern.ch/record/2212936",
+}
+
+@article{Bialas:1976ed,
+      author         = "Bialas, A. and Bleszynski, M. and Czyz, W.",
+      title          = "{Multiplicity Distributions in Nucleus-Nucleus Collisions
+                        at High-Energies}",
+      journal        = "Nucl. Phys.",
+      volume         = "B111",
+      year           = "1976",
+      pages          = "461-476",
+      doi            = "10.1016/0550-3213(76)90329-1",
+      reportNumber   = "TPJU-9/76",
+      SLACcitation   = "%%CITATION = NUPHA,B111,461;%%"
+}
+
+@article{Kharzeev:2000ph, 
+      author         = "Kharzeev, Dmitri and Nardi, Marzia",
+      title          = "{Hadron production in nuclear collisions at RHIC and high
+                        density QCD}",
+      journal        = "Phys. Lett.",
+      volume         = "B507",
+      year           = "2001",
+      pages          = "121-128",
+      doi            = "10.1016/S0370-2693(01)00457-9",
+      eprint         = "nucl-th/0012025",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = NUCL-TH/0012025;%%"
+}
+
+@article{DEVRIES1987495,
+title = "Nuclear charge-density-distribution parameters from elastic electron scattering",
+journal = "Atomic Data and Nuclear Data Tables",
+volume = "36",
+number = "3",
+pages = "495 - 536",
+year = "1987",
+issn = "0092-640X",
+doi = "https://doi.org/10.1016/0092-640X(87)90013-1",
+url = "http://www.sciencedirect.com/science/article/pii/0092640X87900131",
+author = "H. De Vries and C.W. De Jager and C. De Vries",
+}
+
+@article{glauberArticle,
+  title={Lectures in theoretical physics, ed. WE Brittin and LG Dunham},
+  author={Glauber, RJ},
+  journal={Interscience, New York},
+  volume={1},
+  pages={315},
+  year={1959}
+}
+
+@misc{glauberMisc,
+  title={Lectures in theoretical physics},
+  author={Glauber, RJ and others},
+  year={1959},
+  publisher={Interscience, New York London}
+}
+
+@article{Alver:2008aq,
+      author         = "Alver, B. and Baker, M. and Loizides, C. and Steinberg,
+                        P.",
+      title          = "{The PHOBOS Glauber Monte Carlo}",
+      year           = "2008",
+      eprint         = "0805.4411",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = ARXIV:0805.4411;%%"
+}
+
 @article{doi:10.1146/annurev.nucl.57.090506.123020,
 author = {Miller, Michael L. and Reygers, Klaus and Sanders, Stephen J. and Steinberg, Peter},
 title = {Glauber Modeling in High-Energy Nuclear Collisions},
